# symphonix

./: counter_demo.py  pyproject.toml
symphonix/: core.py  modifier.py
symphonix/gtk/: __init__.py  decorator.py  utils.py
symphonix/gtk/components/: __init__.py  box.py  button.py  main_window.py  text.py  text_input.py
symphonix/layout/: alignment.py  arrangement.py  orientation.py
